# qt6-sens-app

./: CMakeLists.txt  README.md  main.cpp  main.qml  manager.cpp  poller.cpp  poller.h
qml/: main.qml
src/: i2chandler.cpp  i2chandler.h  main.cpp  manager.h  sysfsattr.cpp  sysfsattr.h
